complete reproduction section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,105 @@
     <title>House</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/reproduction.css">
 </head>
 <body>
+    <section class="reproduction container">
+        <div class="reproduction__info">
+            <h2 class="reproduction__info-title">Репродукции</h2>
+            <div class="reproduction__info-buttons">
+                <button class="reproduction__info-buttons-item">Франция</button>
+                <button class="reproduction__info-buttons-item">Германия</button>
+                <button class="reproduction__info-buttons-item">Англия</button>
+            </div>
+        </div>
+
+        <div class="reproduction__grid">
+            <div class="reproduction__grid-item">
+                <img
+                    class="reproduction__grid-item-img"
+                    src="https://artchive.ru/res/media/img/ox800/work/ebe/682247.jpg"
+                    alt="pikasso"
+                >
+                <span class="reproduction__grid-item-author">Марсель Руссо</span>
+                <h4 class="reproduction__grid-item-title">Охота Амура</h4>
+                <span class="reproduction__grid-item-description">Холст, масло (50х80)</span>
+                <span class="reproduction__grid-item-price">14 500 руб</span>
+                <button class="g-button">
+                    В корзину
+                </button>
+            </div>
+            <div class="reproduction__grid-item">
+                <img
+                    class="reproduction__grid-item-img"
+                    src="https://artchive.ru/res/media/img/ox800/work/ebe/682247.jpg"
+                    alt="pikasso"
+                >
+                <span class="reproduction__grid-item-author">Марсель Руссо</span>
+                <h4 class="reproduction__grid-item-title">Охота Амура</h4>
+                <span class="reproduction__grid-item-description">Холст, масло (50х80)</span>
+                <span class="reproduction__grid-item-price">14 500 руб</span>
+                <button class="g-button">
+                    В корзину
+                </button>
+            </div>
+            <div class="reproduction__grid-item">
+                <img
+                    class="reproduction__grid-item-img"
+                    src="https://artchive.ru/res/media/img/ox800/work/ebe/682247.jpg"
+                    alt="pikasso"
+                >
+                <span class="reproduction__grid-item-author">Марсель Руссо</span>
+                <h4 class="reproduction__grid-item-title">Охота Амура</h4>
+                <span class="reproduction__grid-item-description">Холст, масло (50х80)</span>
+                <span class="reproduction__grid-item-price">14 500 руб</span>
+                <button class="g-button">
+                    В корзину
+                </button>
+            </div>
+            <div class="reproduction__grid-item">
+                <img
+                    class="reproduction__grid-item-img"
+                    src="https://artchive.ru/res/media/img/ox800/work/ebe/682247.jpg"
+                    alt="pikasso"
+                >
+                <span class="reproduction__grid-item-author">Марсель Руссо</span>
+                <h4 class="reproduction__grid-item-title">Охота Амура</h4>
+                <span class="reproduction__grid-item-description">Холст, масло (50х80)</span>
+                <span class="reproduction__grid-item-price">14 500 руб</span>
+                <button class="g-button">
+                    В корзину
+                </button>
+            </div>
+            <div class="reproduction__grid-item">
+                <img
+                    class="reproduction__grid-item-img"
+                    src="https://artchive.ru/res/media/img/ox800/work/ebe/682247.jpg"
+                    alt="pikasso"
+                >
+                <span class="reproduction__grid-item-author">Марсель Руссо</span>
+                <h4 class="reproduction__grid-item-title">Охота Амура</h4>
+                <span class="reproduction__grid-item-description">Холст, масло (50х80)</span>
+                <span class="reproduction__grid-item-price">14 500 руб</span>
+                <button class="g-button">
+                    В корзину
+                </button>
+            </div>
+            <div class="reproduction__grid-item">
+                <img
+                    class="reproduction__grid-item-img"
+                    src="https://artchive.ru/res/media/img/ox800/work/ebe/682247.jpg"
+                    alt="pikasso"
+                >
+                <span class="reproduction__grid-item-author">Марсель Руссо</span>
+                <h4 class="reproduction__grid-item-title">Охота Амура</h4>
+                <span class="reproduction__grid-item-description">Холст, масло (50х80)</span>
+                <span class="reproduction__grid-item-price">14 500 руб</span>
+                <button class="g-button">
+                    В корзину
+                </button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
